data/stylesheets/orbui.css
/*
---- Header -----
*/
#header{
    padding-top:36px;
    margin-bottom:36px;
}
#header_center{
    margin-top:36px;
}
#header #logo{
    margin-right:48px;
}
#header_right a.popupMenu, #header_right a.login_button {
background: #00a6fc;
display: inline-block;
text-align: center;
padding: 9px 34px 11px;
color: #fff;
text-decoration: none;
font-weight: bold;
line-height: 1;
font-family: "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif;
position: relative;
cursor: pointer;
border: none;
background: #00a6fc url(../images/misc/button-gloss.png) repeat-x 0 -34px;
-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
text-shadow: 0 -1px 1px rgba(0,0,0,0.28);
background: #00a6fc url(../images/misc/button-gloss.png) repeat-x 0 -34px, -moz-linear-gradient(top, rgba(255,255,255,.4) 0%, transparent 100%);
background: #00a6fc url(../images/misc/button-gloss.png) repeat-x 0 -34px, -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.4)), color-stop(100%,transparent));
border: 1px solid #0593dc;
-webkit-transition: background-color .15s ease-in-out;
-moz-transition: background-color .15s ease-in-out;
-o-transition: background-color .15s ease-in-out;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
border-radius: 3px;
width: 120px;
padding-left: 0 !important;
padding-right: 0 !important;
text-align: center;
margin-top: 12px;
}
#header_right #boxmenu_admin {
padding-left: 12px;
padding-right: 12px;
-moz-border-radius-topleft: 0px;
-moz-border-radius-topright: 0px;
-moz-border-radius-bottomright: 6px;
-moz-border-radius-bottomleft: 6px;
-webkit-border-radius: 0px 0px 6px 6px;
border-radius: 0px 0px 6px 6px;
padding-top: 12px;
}
#header .popupLoginBox{
    position:absolute;
    background:#efefef;
    z-index:100;
}
/*
----- Main -----
*/
.mainCol div.section{
    margin-bottom:6px;
}
th {
    font-weight:bold;
    font-size:100%;
    line-height:18px;
    padding:12px;
}
.primary_entities .entityfield th{
    text-align:right;
}
.entityfield th, .entityfield th label{
    padding:12px;
    text-align:right;
}
form label{
    text-align:right;
}
table.attributeForm tr th{
    padding:12px 12px 12px 0;
    vertical-align:top;
}
.editableField{
    position:absolute;
    width:100%;
    opacity:.6;
}
.editableField:hover{
    opacity:1;
}
.primary_entities .entityfield .releditField{
    width:100%;
}
.primary_entities .entityfield form.releditForm,
.primary_entities .entityfield .releditField fieldset,
.primary_entities .entityfield .releditField fieldset *{
    margin:0;
    padding:0;
}
.primary_entities .entityfield .releditField fieldset{
    height:24px;
}
.primary_entities .entityfield .releditField .buttonbar td{
    padding:2px 12px 12px 12px;
}
.primary_entities .entityfield .releditField .buttonbar td button{
    padding: 2px 12px;
}
table#relatedEntities, table.attributeForm{
    margin:0;
    padding:0;
}
form#entityForm div.helper{
    padding-top:4px;
    font-style:italic;
    font-size:10px;
    color:#aaa;
    line-height:12px;
}
form#entityForm legend{
    font-weight:bold;
    border-bottom:1px solid #ddd;
    color:#aaa;
}
/* Input Text facet fix */
.facet input{
    width:100%;
}
input.input-text, textarea{
    width:75%;
    min-width:150px;
}
table.attributeForm table#relatedEntities tr li{
    margin:0;
    padding-right:6px;
}
table.attributeForm table#relatedEntities tr li div a{
    padding-left:6px;
}
table.attributeForm table#relatedEntities th,table.attributeForm table#relatedEntities td{
    margin:0;
    padding:0;
    padding-left:6px;
}
table.attributeForm td{
    vertical-align:middle;
}
.cwinoutadd, .cwinoutremove{
    margin:3px 12px;
}
input.input-text, textarea{
    margin:12px;
    margin-left:0;
    margin-bottom:0;
}
select{
    margin:0;
    padding:0;
    padding:0 6px;
}
/*
----- START UP VIEW -----
                   */
table.startup td{
    padding:6px 0;
    padding-left:6px;
	background: #efefef;
	background: -moz-linear-gradient(top, #FFFFFF 0%, #F4F4F4 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F4F4F4));
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F4F4F4',GradientType=0 );
	box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.25);
	margin: 0 0 20px 0;
    color:#aaa;
}
table.startup td.addcol{
    padding-left:36px;
	background: none;
    box-shadow:none;
    color:#fff;
    font-size:24px;
    font-weight:bold;
}
table.startup td.addcol a{
	background: none;
	box-shadow: none;
    color:#AEC653;
}
#cwinoutadd{
    vertical-align:middle;
}
/*
----- Button -----
                   */
button{
    display: inline-block;
    position: relative;
    padding: 8px 20px 10px;
    width: auto;
    cursor: pointer;
    color: #333;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    line-height: 1;
    font-family: "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif;
    font-size: 11px;
    text-shadow: none;
    background: #e9e9e9 url(../images/misc/button-gloss.png) repeat-x 0 -34px;
    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.5);
    background: #e9e9e9 url(../images/misc/button-gloss.png) repeat-x 0 -34px,
    -moz-linear-gradient(top, rgba(255,255,255,.4) 0%, transparent 100%);
    background: #e9e9e9 url(../images/misc/button-gloss.png) repeat-x 0 -34px,
    -webkit-gradient(linear, left top, left bottom,
    color-stop(0%,rgba(255,255,255,.4)),
    color-stop(100%,transparent));
    background-position: 0 -36px;
    border: 1px solid #cacaca;
    -webkit-transition: background-color .15s ease-in-out;
    -moz-transition: background-color .15s ease-in-out;
    -o-transition: background-color .15s ease-in-out;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
}
button img{
    position:relative;
    top:3px;
    left:-4px;
}
/* Hover ---------- */
button:hover, button:focus {
    background-color: #dadada;
    color: #333;
}
/* Disabled ---------- */
button.disabled, button[disabled] {
    opacity: 0.6;
    cursor: default;
}
/*
----- Boxes -----
                   */
.boxTitle /*Cw H2*/{
    margin-bottom:10px;
}
.boxTitle span /*Cw H2*/{
	font-size: 18px; font-size: 1.8rem; font-weight: normal; margin-bottom: 3px;
}
div.contextFreeBox, div.contextualBox /*Panel Style*/ {
	padding: 12px;
	background: #efefef;
	background: -moz-linear-gradient(top, #FFFFFF 0%, #F4F4F4 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F4F4F4));
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F4F4F4',GradientType=0 );
	box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.25);
	margin: 0 0 20px 0;
}
div.contextFreeBox li, div.contextualBox li {
    margin-bottom: 6px;
}
div.boxTitle span /*Cw H2*/{
	font-size: 14px; font-weight: normal; margin-bottom: 3px;
}
.navboxes .search_box .boxBody *{
    padding:0;
    margin:0;
}
.navboxes .search_box .boxBody td{
    padding-right:6px;
}
.navboxes .search_box input#rqlboxsubmit{
    padding-left:12px;
    min-width:24px;
}

/* Sub Menu in Boxes ---------- */
li a.boxMenu {
    padding-left:26px;
    background:transparent url('../images/orbui/arrow_bottom.png') no-repeat 0 0;
}
li a.boxMenu:hover {
    cursor:pointer;
    opacity:.8;
}
ul.boxListing li ul{
    margin-top:12px;
    margin-left:20px;
    background:#efefef;
    padding:2px 0 0px 0;
}
ul.boxListing li ul li {
    padding:0;
    padding-left:8px;
    padding-bottom:6px;
    margin:0;
    line-height: 1;
    margin-top:6px;
    border-bottom:dotted 1px #fff;
    width:100%;
}
ul.boxListing li ul li a{
    font-size:90%;
    opacity:.9;
}
/*
--- TABLES ---
             */
table{
    border:none;
}
/*
-- ZEBRA TABLE --
             */
table tbody tr:nth-child(even) { background: transparent; }
/*
---  FORMS ---
              */
form fieldset{
    border:none;
}
div.formTitle span /*h1 in Form title*/{
	font-size: 32px;
    font-size: 3.2em;
    line-height: 1.3;
    margin-bottom:32px;
}
div.formBody >form >fieldset/*Panel Style*/ {
	padding: 20px 20px 2px 20px;
	background: #efefef;
	background: -moz-linear-gradient(top, #FFFFFF 0%, #F4F4F4 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F4F4F4));
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F4F4F4',GradientType=0 );
	box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.15);
	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.25);
	margin: 20px 0 20px 0;
}
form fieldset table{
    background:none;
}
/* Labels ---------- */
form label{
    font-weight:bold;
}
/*
---  INPUT  ---
              */
table#tsearch{
    background:none;
}
table#tsearch input{
    max-width:146px;
}
#loginForm input {
    width: 146px;
    margin-left:10px;
}
/*
--- Messages ---
              */
#appMsg{/*nine columns*/
    position: fixed;
    right: 10px;
    top: 10px;
    width: 200px;
    display: block;
    padding: 6px 7px;
    font-weight: bold;
    font-size: 13px;
    text-align:center;
    border: 1px solid rgba(0,0,0,0.1);
    margin-bottom: 12px;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
	background-color: #7fae00;
    color: #fff;
    text-shadow: 0 -1px rgba(0,0,0,0.3);
}/*
#applmessagesComponent, div.msg *//*Alert succes*/{
/*    display: block;
    padding: 6px 7px;
    font-weight: bold;
    font-size: 13px;
    text-align:center;
    margin-bottom: 12px;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    position: relative;
	background-color: #7fae00;
    color: #fff;
    text-shadow: 0 -1px rgba(0,0,0,0.3);
}*/

